src/dhcp-manager/nm-dhcp-client.c
@@ -717,7 +717,7 @@ copy_option (const char * key,
 gboolean
 nm_dhcp_client_handle_event (gpointer unused,
                              const char *iface,
-                             gint64 pid,
+                             gint pid,
                              GHashTable *options,
                              const char *reason,
                              NMDhcpClient *self)
